--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -136,11 +136,11 @@
                 <form id="loginForm">
                     <div class="mb-3">
                         <label class="form-label">Username</label>
-                        <input type="text" id="username" class="form-control" required value="admin">
+                        <input type="text" id="username" class="form-control" required placeholder="Enter username">
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Password</label>
-                        <input type="password" id="password" class="form-control" required value="admin123">
+                        <input type="password" id="password" class="form-control" required placeholder="Enter password">
                     </div>
                     <button type="submit" class="btn btn-warning w-100 py-2 fw-bold text-white">Login</button>
                 </form>
@@ -288,7 +288,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         $(document).ready(function () {
-            const API_URL = 'http://localhost:5000/api';
+            const API_URL = window.location.origin.includes('localhost') ? 'http://localhost:5000/api' : window.location.origin + '/api';
             let token = localStorage.getItem('adminToken');
 
             if (token) {
