--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -289,7 +289,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         $(document).ready(function () {
-            const API_URL = 'http://localhost:5000/api';
+            const API_URL = window.location.origin.includes('localhost') ? 'http://localhost:5000/api' : window.location.origin + '/api';
             let cart = [];
             let totalCost = 0;
             let orderType = 'delivery';
